--- a/css/Sass/styles.css
+++ b/css/Sass/styles.css
@@ -10,7 +10,6 @@
   /* Opera 12+ */
   animation: fadein 3s 1 forwards;
   /* IE 10+, Fx 29+ */
-  -webkit-animation-delay: 3s;
   animation-delay: 3s; }
 
 #logo {
@@ -49,7 +48,6 @@ fieldset, img {
     bottom: 20vh;
     -webkit-animation: fadeInUp 0.5s forwards;
     -webkit-animation-delay: 3s;
-    -webkit-animation: fadeInUp 2s forwards;
     animation: fadeInUp 2s forwards;
     animation-delay: 3s;
     opacity: 1; }
@@ -62,9 +60,7 @@ fieldset, img {
     color: white;
     -webkit-animation: fadeInUp 0.5s forwards;
     -webkit-animation-delay: 3.3s;
-    -webkit-animation: fadeInUp 2s forwards;
     animation: fadeInUp 2s forwards;
-    -webkit-animation-delay: 3s;
     animation-delay: 3s; }
   #content0 #down {
     height: 60px;
@@ -80,33 +76,26 @@ fieldset, img {
     /* Opera 12+ */
     animation: fadein 3s 1 forwards;
     /* IE 10+, Fx 29+ */
-    -webkit-animation-delay: 5s;
     animation-delay: 5s; }
 
 #content1 {
   position: relative;
   overflow: hidden;
-  background-size: cover;
-  height: 100vh; }
-  #content1 #titulo {
+  height: 100vh;
+  background-size: cover; }
+  #content1 .title {
     position: absolute;
     top: 9vh;
     left: 10vw;
     color: black;
-    font-size: 8vh;
+    font-size: 30px;
     font-weight: bold; }
   #content1 .arti {
     position: relative;
     font-size: 2.5vh;
+    width: 95vw;
     color: black;
     top: 25vh; }
-  #content1 .photo {
-    background: url("../images/principal-3.JPG") no-repeat center center fixed;
-    position: relative;
-    overflow: hidden;
-    top: 21vh;
-    height: 50vh;
-    background-size: cover; }
   @media (max-width: 991.98px) {
     #content1 {
       height: 110vh; } }
@@ -116,40 +105,41 @@ fieldset, img {
   @media (max-width: 575.98px) {
     #content1 {
       height: 130vh; } }
-
-#content11 {
-  position: relative;
-  overflow: hidden;
-  background-size: cover; }
-  #content11 #titulo {
-    position: absolute;
-    top: 9vh;
-    left: 10vw;
-    color: black;
-    font-size: 8vh;
-    font-weight: bold; }
-  #content11 .arti {
+  #content1 .photo {
+    background: url("../images/nosotros-1.JPG") no-repeat center center fixed;
     position: relative;
-    font-size: 2.5vh;
-    color: black;
-    top: 25vh; }
+    overflow: hidden;
+    top: 21vh;
+    height: 50vh;
+    background-size: cover; }
 
 #content21 {
   position: relative;
   overflow: hidden;
+  height: 100vh;
   background-size: cover; }
-  #content21 #titulo {
+  #content21 .title {
     position: absolute;
     top: 9vh;
     left: 10vw;
     color: black;
-    font-size: 8vh;
+    font-size: 30px;
     font-weight: bold; }
   #content21 .arti {
     position: relative;
     font-size: 2.5vh;
+    width: 95vw;
     color: black;
     top: 25vh; }
+  @media (max-width: 991.98px) {
+    #content21 {
+      height: 110vh; } }
+  @media (max-width: 767.98px) {
+    #content21 {
+      height: 120vh; } }
+  @media (max-width: 575.98px) {
+    #content21 {
+      height: 130vh; } }
   #content21 .photo {
     background: url("../images/marcos-1.jpg") no-repeat center center fixed;
     position: relative;
@@ -161,19 +151,30 @@ fieldset, img {
 #content22 {
   position: relative;
   overflow: hidden;
+  height: 100vh;
   background-size: cover; }
-  #content22 #titulo {
+  #content22 .title {
     position: absolute;
     top: 9vh;
     left: 10vw;
     color: black;
-    font-size: 8vh;
+    font-size: 30px;
     font-weight: bold; }
   #content22 .arti {
     position: relative;
     font-size: 2.5vh;
+    width: 95vw;
     color: black;
     top: 25vh; }
+  @media (max-width: 991.98px) {
+    #content22 {
+      height: 110vh; } }
+  @media (max-width: 767.98px) {
+    #content22 {
+      height: 120vh; } }
+  @media (max-width: 575.98px) {
+    #content22 {
+      height: 130vh; } }
   #content22 .photo {
     background: url("../images/espejos.jpg") no-repeat center center fixed;
     position: relative;
@@ -185,19 +186,30 @@ fieldset, img {
 #content23 {
   position: relative;
   overflow: hidden;
+  height: 100vh;
   background-size: cover; }
-  #content23 #titulo {
+  #content23 .title {
     position: absolute;
     top: 9vh;
     left: 10vw;
     color: black;
-    font-size: 8vh;
+    font-size: 30px;
     font-weight: bold; }
   #content23 .arti {
     position: relative;
     font-size: 2.5vh;
+    width: 95vw;
     color: black;
     top: 25vh; }
+  @media (max-width: 991.98px) {
+    #content23 {
+      height: 110vh; } }
+  @media (max-width: 767.98px) {
+    #content23 {
+      height: 120vh; } }
+  @media (max-width: 575.98px) {
+    #content23 {
+      height: 130vh; } }
   #content23 .photo {
     background: url("../images/escaparate-2.jpg") no-repeat center center fixed;
     position: relative;
@@ -209,19 +221,30 @@ fieldset, img {
 #content24 {
   position: relative;
   overflow: hidden;
+  height: 100vh;
   background-size: cover; }
-  #content24 #titulo {
+  #content24 .title {
     position: absolute;
     top: 9vh;
     left: 10vw;
     color: black;
-    font-size: 8vh;
+    font-size: 30px;
     font-weight: bold; }
   #content24 .arti {
     position: relative;
     font-size: 2.5vh;
+    width: 95vw;
     color: black;
     top: 25vh; }
+  @media (max-width: 991.98px) {
+    #content24 {
+      height: 110vh; } }
+  @media (max-width: 767.98px) {
+    #content24 {
+      height: 120vh; } }
+  @media (max-width: 575.98px) {
+    #content24 {
+      height: 130vh; } }
   #content24 .photo {
     background: url("../images/tienda-2.jpg") no-repeat center center fixed;
     position: relative;
@@ -233,19 +256,30 @@ fieldset, img {
 #content3 {
   position: relative;
   overflow: hidden;
+  height: 100vh;
   background-size: cover; }
-  #content3 #titulo {
+  #content3 .title {
     position: absolute;
     top: 9vh;
     left: 10vw;
     color: black;
-    font-size: 8vh;
+    font-size: 30px;
     font-weight: bold; }
   #content3 .arti {
     position: relative;
     font-size: 2.5vh;
+    width: 95vw;
     color: black;
     top: 25vh; }
+  @media (max-width: 991.98px) {
+    #content3 {
+      height: 110vh; } }
+  @media (max-width: 767.98px) {
+    #content3 {
+      height: 120vh; } }
+  @media (max-width: 575.98px) {
+    #content3 {
+      height: 130vh; } }
   #content3 .photo {
     background: url("../images/servicios-1.jpg") no-repeat center center fixed;
     position: relative;
@@ -262,19 +296,30 @@ fieldset, img {
 #content4 {
   position: relative;
   overflow: hidden;
+  height: 100vh;
   background-size: cover; }
-  #content4 #titulo {
+  #content4 .title {
     position: absolute;
     top: 9vh;
     left: 10vw;
     color: black;
-    font-size: 8vh;
+    font-size: 30px;
     font-weight: bold; }
   #content4 .arti {
     position: relative;
     font-size: 2.5vh;
+    width: 95vw;
     color: black;
     top: 25vh; }
+  @media (max-width: 991.98px) {
+    #content4 {
+      height: 110vh; } }
+  @media (max-width: 767.98px) {
+    #content4 {
+      height: 120vh; } }
+  @media (max-width: 575.98px) {
+    #content4 {
+      height: 130vh; } }
   #content4 #map {
     position: relative;
     overflow: hidden;
@@ -290,13 +335,20 @@ footer {
 @media (max-width: 991.98px) {
   .arti {
     font-size: 30px; }
+
   #logo {
     height: 25px; }
+
   .pl-5 {
     padding-left: 0rem; }
+
   .ml-5 {
     margin-left: 0rem; }
+
   .pr-5 {
     padding-right: 0rem; }
+
   .mr-5 {
     margin-right: 0rem; } }
+
+/*# sourceMappingURL=styles.css.map */
