--- a/css/Sass/styles.scss
+++ b/css/Sass/styles.scss
@@ -4,33 +4,39 @@
 @mixin sections {
   position: relative;
   overflow: hidden;
-  height: 110vh;
   background-size: cover;
-  .title {
+  #titulo {
     position: absolute;
-    top: 8vh;
+    top: 9vh;
     left: 10vw;
-    color: white;
-    font-size: 10vh;
+    color: black;
+    font-size: 8vh;
     font-weight: bold;
   }
-  .subtitle {
-    position: absolute;
-    font-size: 3.8vh;
-    width: 95vw;
-    color: white;
-    bottom: 9vh;
-    right: 1vw;
+  .arti {
+    position: relative;
+    font-size: 2.5vh;
+    color: black;
+    top: 25vh;
   }
 }
 
+#myNavbar {
+  opacity: 0;
+  -webkit-animation: fadein 3s 1 forwards; /* Safari 4+ */
+  -moz-animation:    fadein 3s 1 forwards; /* Fx 5+ */
+  -o-animation:      fadein 3s 1 forwards; /* Opera 12+ */
+  animation:         fadein 3s 1 forwards; /* IE 10+, Fx 29+ */
+  animation-delay: 3s;
+}
+
 #logo {
-  height: 25px;
+  height: 30px;
 }
 
 body {
   font-family: 'Montserrat', sans-serif;
-  background-color: black;
+  background-color: white;
 }
 
 fieldset, img {
@@ -40,23 +46,30 @@ fieldset, img {
 #content0 {
   position: relative;
   overflow: hidden;
-  height: 110vh;
-  background: url("../images/shop-0.JPG") no-repeat center center fixed;
+  height: 100vh;
   background-size: cover;
-  -webkit-animation: fadein 5s 1; /* Safari 4+ */
-  -moz-animation:    fadein 5s 1; /* Fx 5+ */
-  -o-animation:      fadein 5s 1; /* Opera 12+ */
-  animation:         fadein 5s 1; /* IE 10+, Fx 29+ */
 
+  .backPhoto {
+    position: relative;
+    overflow: hidden;
+    height: 100vh;
+    background: url("../images/tienda-1-1.JPG") no-repeat center center fixed;
+    background-size: cover;
+    -webkit-animation: fadein 5s 1; /* Safari 4+ */
+    -moz-animation:    fadein 5s 1; /* Fx 5+ */
+    -o-animation:      fadein 5s 1; /* Opera 12+ */
+    animation:         fadein 5s 1; /* IE 10+, Fx 29+ */
+  }
   .title {
     width: 60vh;
     position: absolute;
     right: -80vh;
     bottom: 20vh;
-    -webkit-animation: slide-left 0.5s forwards;
+    -webkit-animation: fadeInUp 0.5s forwards;
     -webkit-animation-delay: 3s;
-    animation: slide-left 2s forwards;
+    animation: fadeInUp 2s forwards;
     animation-delay: 3s;
+    opacity: 1;
   }
 
   .subtitle {
@@ -66,65 +79,172 @@ fieldset, img {
      bottom: 14vh;
      right: -80vh;
      color: white;
-     -webkit-animation: slide-left-2 0.5s forwards;
+     -webkit-animation: fadeInUp 0.5s forwards;
      -webkit-animation-delay: 3.3s;
-     animation: slide-left 2s forwards;
+     animation: fadeInUp 2s forwards;
      animation-delay: 3s;
+  }
+  #down {
+    height: 60px;
+    position: absolute;
+    bottom: 5vh;
+    right: 50vw;
+    opacity: 0;
+    -webkit-animation: fadein 3s 1 forwards; /* Safari 4+ */
+    -moz-animation:    fadein 3s 1 forwards; /* Fx 5+ */
+    -o-animation:      fadein 3s 1 forwards; /* Opera 12+ */
+    animation:         fadein 3s 1 forwards; /* IE 10+, Fx 29+ */
+    animation-delay: 5s;
   }
 }
 
 #content1 {
-  background: url("../images/shop-nosotros.JPG") no-repeat center center fixed;
+  @include sections;
+  height: 100vh;
+  .photo {
+    background: url("../images/principal-3.JPG") no-repeat center center fixed;
+      position: relative;
+      overflow: hidden;
+      top: 21vh;
+      height: 50vh;
+      background-size: cover;
+  }
+  @media (max-width: 991.98px) {
+    height: 110vh;
+  }
+  // Small devices (landscape phones, less than 768px)
+  @media (max-width: 767.98px) {
+    height: 120vh;
+  }
+  @media (max-width: 575.98px) {
+    height: 130vh;
+  }
+}
+
+#content11 {
   @include sections;
 }
 
 #content21 {
-  background: url("../images/shop-2.jpg") no-repeat center center fixed;
   @include sections;
+  .photo {
+    background: url("../images/marcos-1.jpg") no-repeat center center fixed;
+      position: relative;
+      overflow: hidden;
+      top: 21vh;
+      height: 50vh;
+      background-size: cover;
+  }
 }
 
 #content22 {
-  background: url("../images/shop-3.jpg") no-repeat center center fixed;
   @include sections;
+  .photo {
+    background: url("../images/espejos.jpg") no-repeat center center fixed;
+      position: relative;
+      overflow: hidden;
+      top: 21vh;
+      height: 50vh;
+      background-size: cover;
+  }
 }
 
 #content23 {
-  background: url("../images/shop-4.jpg") no-repeat center center fixed;
   @include sections;
+  .photo {
+    background: url("../images/escaparate-2.jpg") no-repeat center center fixed;
+      position: relative;
+      overflow: hidden;
+      top: 21vh;
+      height: 50vh;
+      background-size: cover;
+  }
+}
+
+#content24 {
+  @include sections;
+  .photo {
+    background: url("../images/tienda-2.jpg") no-repeat center center fixed;
+      position: relative;
+      overflow: hidden;
+      top: 21vh;
+      height: 50vh;
+      background-size: cover;
+  }
 }
 
 #content3 {
-  background: url("../images/shop-5.jpg") no-repeat center center fixed;
   @include sections;
+  .photo {
+    background: url("../images/servicios-1.jpg") no-repeat center center fixed;
+      position: relative;
+      overflow: hidden;
+      top: 21vh;
+      height: 50vh;
+      background-size: cover;
+  }
+}
+
+#map {
+  position: relative;
+  width: 100%;
+  height: 49vh;
 }
 
 #content4 {
-  position: relative;
-  overflow: hidden;
-  height: 100vh;
-  background: url("../images/cambrils.JPG") no-repeat center center fixed;
-  background-size: cover;
-  .title {
-    position: absolute;
-    top: 10vh;
-    left: 10vw;
-    color: white;
-    font-size: 10vh;
-    font-weight: bold;
-  }
-  .subtitle {
-    position: absolute;
-    font-size:2vh;
-    width: 95vw;
-    color: white;
-    bottom: 2vh;
-    left: 1vh;
-    right: 1vh;
-  }
+  @include sections;
   #map {
-    position: absolute;
-    width: 100%;
-    height: 49vh;
-    top: 24vh;
+      position: relative;
+      overflow: hidden;
+      top: 21vh;
+      height: 50vh;
+      background-size: cover;
   }
+}
+
+footer {
+  height: 10vh;
+  color: white;
+  text-align: center;
+}
+
+// Extra small devices (portrait phones, less than 576px)
+@media (max-width: 575.98px) {
+
+}
+
+// Small devices (landscape phones, less than 768px)
+@media (max-width: 767.98px) {
+
+}
+
+// Medium devices (tablets, less than 992px)
+@media (max-width: 991.98px) {
+  .arti {
+    font-size: 30px;
+  }
+  #logo {
+    height: 25px;
+  }
+  .pl-5 {
+    padding-left: 0rem;
+  }
+  .ml-5 {
+    margin-left: 0rem;
+  }
+  .pr-5 {
+    padding-right: 0rem;
+  }
+  .mr-5 {
+    margin-right: 0rem;
+  }
+}
+
+// Large devices (desktops, less than 1200px)
+@media (max-width: 1199.98px) {
+
+}
+
+@media screen and (max-width: 870px) {
+
 }
